Fix wellspring icons not showing up in the preview

--- a/styles/css/features/invoker/wellspring-preview.css
+++ b/styles/css/features/invoker/wellspring-preview.css
@@ -10,6 +10,11 @@
 		text-align: center;
 	}
 
+	i {
+		width: 24px;
+		height: 24px;
+	}
+
 	.ra-droplets {
 		color: cornflowerblue;
 	}
